// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-341282}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. closeroundicon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={-1}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={-1}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. deleteicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={-16777216}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGGroup>
              <RNSVGPath />
              <RNSVGPath />
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. glassmagnifiericon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={-1}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={-1}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconcheckmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={null}
      stroke={-1728053248}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. iconfacebook renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={-341282}
      stroke={-4128786}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`8. iconforwardarrow renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={-341282}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`9. iconnointernet renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGDefs>
      <RNSVGPath />
    </RNSVGDefs>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGMask
        fill={-1}
      >
        <RNSVGUse />
      </RNSVGMask>
      <RNSVGPath
        fill={-13421773}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`10. iconsavebookmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`12. icontwitter renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`13. iconvideo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGRect
      fill={-341282}
      stroke={-4128786}
    />
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`14. iconvideo360player renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`15. leftchevron renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={-1}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={-1}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`16. rightorientedglassmagnifier renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={-16777216}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGCircle />
            <RNSVGPath />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`17. thestlogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`18. thetimeslogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
